--- a/ParseRawData.ipynb
+++ b/ParseRawData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -283,13 +283,13 @@
        "4  03111100                                    Graines de soja"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cpv = pd.read_csv('app/donneesComplementaires/genealogie_cpv.csv', sep = ';', encoding='latin-1')\n",
+    "cpv = pd.read_csv('donneesComplementaires/genealogie_cpv.csv', sep = ';', encoding='latin-1')\n",
     "cpv = cpv[['CODE', 'FR']]\n",
     "cpv = cpv.rename(columns={'CODE': 'codeCPV', 'FR' : 'nomCPV'})\n",
     "cpv['codeCPV'] = cpv['codeCPV'].str.slice(0,8)\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,11 +412,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = pd.read_csv('app/config.csv', header=None)\n",
+    "config = pd.read_csv('config.csv', header=None)\n",
     "id = config[0][0]\n",
     "pwd = config[0][1]\n",
     "host = config[0][2]\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,13 +508,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "infosG_new.to_csv('Contrats.csv', index=False, sep= '|', quoting=csv.QUOTE_NONNUMERIC)\n",
-    "infosA_new.to_csv('Acheteurs.csv', index=False, sep= '|', quoting=csv.QUOTE_NONNUMERIC)\n",
-    "infosT_new.to_csv('Titulaires.csv', index=False, sep= '|', quoting=csv.QUOTE_NONNUMERIC)"
+    "infosG_new.to_csv('Contrats.csv', index=False, sep= '|', quoting=csv.QUOTE_NONNUMERIC, encoding='utf-8')\n",
+    "infosA_new.to_csv('Acheteurs.csv', index=False, sep= '|', quoting=csv.QUOTE_NONNUMERIC, encoding='utf-8')\n",
+    "infosT_new.to_csv('Titulaires.csv', index=False, sep= '|', quoting=csv.QUOTE_NONNUMERIC, encoding='utf-8')"
    ]
   },
   {
