--- a/ParseRawData.ipynb
+++ b/ParseRawData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connexion à Postgresql ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "config = pd.read_csv('config.csv', header=None)\n",
+    "id = config[0][0]\n",
+    "pwd = config[0][1]\n",
+    "host = config[0][2]\n",
+    "engine = create_engine('postgresql://%s:%s@%s/decp'%(id, pwd, host))\n",
+    "print(\"Connexion à Postgresql ok\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def remplacer(node):\n",
+    "    if node is None : \n",
+    "        return ''\n",
     "    try : \n",
     "        return node.text\n",
     "    except : \n",
@@ -40,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +77,7 @@
     "        idContrat = nomFichierSource + '_' + str(numContrat)\n",
     "        \n",
     "    # Type de contrat\n",
+    "    typeContrat = contrat.tag\n",
     "    if typeContrat == \"marche\" :\n",
     "        try :\n",
     "            uidContrat = idContrat + '_' + contrat.find('acheteur/id').text\n",
@@ -121,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,19 +157,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traitement de : data\\decp.xml\n"
+      "Traitement de : data\\decp.xml\n",
+      "Il y a 59652 contrats\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "18232\n",
+      "Erreur sur un marché\n",
+      "19000\n",
+      "20000\n",
+      "20591\n",
+      "Erreur sur un marché\n",
+      "21000\n",
+      "22000\n",
+      "23000\n",
+      "24000\n",
+      "25000\n",
+      "26000\n",
+      "27000\n",
+      "28000\n",
+      "29000\n",
+      "30000\n",
+      "31000\n",
+      "32000\n",
+      "33000\n",
+      "34000\n",
+      "35000\n",
+      "36000\n",
+      "37000\n",
+      "37641\n",
+      "Erreur sur un marché\n",
+      "38000\n",
+      "39000\n",
+      "40000\n",
+      "40948\n",
+      "Erreur sur un marché\n",
+      "41000\n",
+      "42000\n",
+      "43000\n",
+      "44000\n",
+      "45000\n",
+      "46000\n",
+      "47000\n",
+      "48000\n",
+      "49000\n",
+      "50000\n",
+      "51000\n",
+      "52000\n",
+      "53000\n",
+      "54000\n",
+      "55000\n",
+      "56000\n",
+      "57000\n",
+      "58000\n",
+      "59000\n"
      ]
     }
    ],
    "source": [
-    "for file in glob.glob(\"data/*.xml\") :\n",
+    "files = glob.glob(\"data/*.xml\")\n",
+    "for file in files :\n",
     "    print(\"Traitement de : \" + file)\n",
     "    try : \n",
     "        tree = etree.parse(file)\n",
@@ -155,23 +249,40 @@
     "        \n",
     "    id_file = file\n",
     "    c = 0\n",
-    "    for contrat in root : \n",
+    "    print(\"Il y a %s contrats\"%len(root))\n",
+    "\n",
+    "    for contrat in root :\n",
     "        c = c+1\n",
-    "        informations = traiterContrat(contrat, contrat.tag, id_file, c)\n",
-    "        #print(informations)\n",
-    "        infosG_new.append(informations['infosG'])\n",
-    "        infosA_new.append(informations['infosA'])\n",
-    "        for element in informations['infosT'] : # Boucle car plusieurs titulaires possibles\n",
-    "            infosT_new.append(element)"
+    "        if c % 1000 == 0 : \n",
+    "            print(c)\n",
+    "        try : \n",
+    "            informations = traiterContrat(contrat, contrat.tag, id_file, c)\n",
+    "            #print(informations)\n",
+    "            infosG_new.append(informations['infosG'])\n",
+    "            infosA_new.append(informations['infosA'])\n",
+    "            for element in informations['infosT'] : # Boucle car plusieurs titulaires possibles\n",
+    "                infosT_new.append(element)\n",
+    "        except : \n",
+    "            print(c)\n",
+    "            print(\"Erreur sur un marché\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passage en data frame\n"
+     ]
+    }
+   ],
    "source": [
     "# Passage en tableau\n",
+    "print(\"Passage en data frame\")\n",
     "infosG_new = pd.DataFrame(infosG_new)\n",
     "infosA_new = pd.DataFrame(infosA_new)\n",
     "infosT_new = pd.DataFrame(infosT_new)"
@@ -185,6 +296,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Début du nettoyage de données\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Début du nettoyage de données\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -193,10 +321,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t Nature de marché\n"
+     ]
+    }
+   ],
    "source": [
+    "print(\"\\t Nature de marché\")\n",
     "infosG_new.loc[infosG_new['nature'] == 'CONCESSION DE TRAVAUX',  'nature'] = 'Concession de travaux'\n",
     "infosG_new.loc[infosG_new['nature'] == 'CONCESSION DE SERVICE',  'nature'] = 'Concession de service'\n",
     "infosG_new.loc[infosG_new['nature'] == 'CONCESSION DE SERVICE PUBLIC',  'nature'] = 'Concession de service public'\n",
@@ -216,9 +353,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t Code CPV\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -283,12 +427,13 @@
        "4  03111100                                    Graines de soja"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(\"\\t Code CPV\")\n",
     "cpv = pd.read_csv('donneesComplementaires/genealogie_cpv.csv', sep = ';', encoding='latin-1')\n",
     "cpv = cpv[['CODE', 'FR']]\n",
     "cpv = cpv.rename(columns={'CODE': 'codeCPV', 'FR' : 'nomCPV'})\n",
@@ -298,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -317,10 +462,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t Lieu d'exécution\n"
+     ]
+    }
+   ],
    "source": [
+    "print(\"\\t Lieu d'exécution\")\n",
     "infosG_new['lieuExecCodeDep'] = infosG_new['lieuExecCode']\n",
     "infosG_new['lieuExecCodeDep'] = infosG_new['lieuExecCodeDep'].str.replace(\"FR([0-9]{5})\", r'\\1')\n",
     "\n",
@@ -356,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,19 +532,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t Montant\n"
+     ]
+    }
+   ],
    "source": [
+    "print(\"\\t Montant\")\n",
     "infosG_new['montant'] = infosG_new['montant'].str.replace(\"^([0-9]*)(\\.[0-9]{2})([0-9]*)$\", r'\\1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t Cosmétique\n"
+     ]
+    }
+   ],
    "source": [
+    "print(\"\\t Cosmétique\")\n",
     "# Réagencement des colonnes\n",
     "infosG_new = infosG_new[['idContrat', 'uidContrat', 'typeContrat', 'nature', 'objet', \n",
     "                         'codeCPV', 'nomCPV', 'procedure', \n",
@@ -404,28 +576,134 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Travail sur SIRENE pour homogénéiser les noms des acheteurs et titulaires"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = pd.read_csv('config.csv', header=None)\n",
-    "id = config[0][0]\n",
-    "pwd = config[0][1]\n",
-    "host = config[0][2]\n",
-    "engine = create_engine('postgresql://%s:%s@%s/decp'%(id, pwd, host))"
+    "infosG_new.to_csv('Contrats.csv', index=False, sep= '|', \n",
+    "                  quoting=csv.QUOTE_NONNUMERIC, encoding='utf-8')\n",
+    "infosA_new.to_csv('Acheteurs.csv', index=False, sep= '|', \n",
+    "                  quoting=csv.QUOTE_NONNUMERIC, encoding='utf-8')\n",
+    "infosT_new.to_csv('Titulaires.csv', index=False, sep= '|', \n",
+    "                  quoting=csv.QUOTE_NONNUMERIC, encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idContrat</th>\n",
+       "      <th>uidContrat</th>\n",
+       "      <th>typeIdentifiant</th>\n",
+       "      <th>idTitulaire</th>\n",
+       "      <th>denominationSocialeTitulaire</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>data\\decp.xml_1</td>\n",
+       "      <td>data\\decp.xml_1_24620036400080</td>\n",
+       "      <td>SIRET</td>\n",
+       "      <td>13002271800451</td>\n",
+       "      <td>PORTS DE LILLE - CCI HDF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20183WC4e9_iEw00</td>\n",
+       "      <td>20183WC4e9_iEw00_00000000000000</td>\n",
+       "      <td>SIRET</td>\n",
+       "      <td>38473368900044</td>\n",
+       "      <td>sirsi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20184CMDlZYWaE00</td>\n",
+       "      <td>20184CMDlZYWaE00_00000000000000</td>\n",
+       "      <td>SIRET</td>\n",
+       "      <td>82875377200015</td>\n",
+       "      <td>KOIS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018AFz6cQk3fp00</td>\n",
+       "      <td>2018AFz6cQk3fp00_00000000000000</td>\n",
+       "      <td>SIRET</td>\n",
+       "      <td>38436218200030</td>\n",
+       "      <td>Labrador</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018CbTqIfAozu00</td>\n",
+       "      <td>2018CbTqIfAozu00_00000000000000</td>\n",
+       "      <td>SIRET</td>\n",
+       "      <td>51820625500011</td>\n",
+       "      <td>Labrador Translations</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          idContrat                       uidContrat typeIdentifiant  \\\n",
+       "0   data\\decp.xml_1   data\\decp.xml_1_24620036400080           SIRET   \n",
+       "1  20183WC4e9_iEw00  20183WC4e9_iEw00_00000000000000           SIRET   \n",
+       "2  20184CMDlZYWaE00  20184CMDlZYWaE00_00000000000000           SIRET   \n",
+       "3  2018AFz6cQk3fp00  2018AFz6cQk3fp00_00000000000000           SIRET   \n",
+       "4  2018CbTqIfAozu00  2018CbTqIfAozu00_00000000000000           SIRET   \n",
+       "\n",
+       "      idTitulaire denominationSocialeTitulaire  \n",
+       "0  13002271800451     PORTS DE LILLE - CCI HDF  \n",
+       "1  38473368900044                        sirsi  \n",
+       "2  82875377200015                        KOIS   \n",
+       "3  38436218200030                     Labrador  \n",
+       "4  51820625500011        Labrador Translations  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "infosA_new.head()\n",
+    "infosT_new.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Travail sur SIRENE pour homogénéiser les noms des acheteurs et titulaires\n",
+    "Non utilisé pour le moment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,20 +723,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "print(\"Traitement de SIRENE pour homogénéiser les noms d'acheteurs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "infosA_new['sirenAcheteur'] = infosA_new['idAcheteur'].str.slice(0, 9)\n",
     "acheteurSiren = infosSirene(infosA_new['sirenAcheteur'].unique())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "acheteurSiren = acheteurSiren[['siren', 'denominationunique']]\n",
     "infosA_new = infosA_new.merge(acheteurSiren, left_on='sirenAcheteur', right_on='siren', how = \"left\")\n",
@@ -475,20 +756,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "print(\"Traitement de SIRENE pour homogénéiser les noms des titulaires\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "infosT_new['sirenTitulaire'] = infosT_new['idTitulaire'].str.slice(0,9)\n",
     "titulairesSiren = infosSirene(infosT_new['sirenTitulaire'].unique())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "titulairesSiren = titulairesSiren[['siren', 'denominationunique']]\n",
     "titulairesSiren['denominationunique'] = titulairesSiren['denominationunique'].str.replace(\"(.*)\\((.*)\\)\", r'\\1')\n",
@@ -496,25 +780,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "infosT_new['denominationunique'].fillna(infosT_new['denominationSocialeTitulaire'], inplace=True)\n",
     "infosT_new = infosT_new.rename(columns={'denominationunique': 'nomSirenTitulaire'})\n",
     "del infosT_new['siren']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "infosG_new.to_csv('Contrats.csv', index=False, sep= '|', quoting=csv.QUOTE_NONNUMERIC, encoding='utf-8')\n",
-    "infosA_new.to_csv('Acheteurs.csv', index=False, sep= '|', quoting=csv.QUOTE_NONNUMERIC, encoding='utf-8')\n",
-    "infosT_new.to_csv('Titulaires.csv', index=False, sep= '|', quoting=csv.QUOTE_NONNUMERIC, encoding='utf-8')"
    ]
   },
   {
